# rustsysfetch

./: Cargo.toml  README.md
.github/workflows/: rust.yml
logos/: fedora  penguin  rocky  ubuntu
src/: main.rs  unix.rs
