[package]
name = "hackaton"
version = "0.1.1"
edition = "2021"
authors = ["Antti Rae anttirae@gmail.com"]
license = "MIT"
description = "A tool to fetch system information"
readme = "README.md"
homepage = "https://github.com/AnttiRae/RustScreenFetchThingy"
repository = "https://github.com/AnttiRae/RustScreenFetchThingy"
keywords = ["cli", "demo"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "2.31.2"
prettytable-rs = "0.10.0"
rust-embed = "8.0.0"
regex = { version = "1.10.2", features = [] }
#sys-info = "0.5.6"
#log = "0.4.1"
