[package]
name = "rustsysfetch"
version = "0.1.1"
edition = "2021"
authors = ["Antti Rae anttirae@gmail.com"]
license = "MIT"
description = "A tool to fetch system information"
readme = "README.md"
homepage = "https://github.com/AnttiRae/RustScreenFetchThingy"
repository = "https://github.com/AnttiRae/RustScreenFetchThingy"
keywords = ["cli"]
categories = ["command-line-utilities"]


[dependencies]
prettytable-rs = "0.10.0"
rust-embed = "8.0.0"
regex = { version = "1.10.2", features = [] }
colored = "2.0.4"
